src/test/deca/context/invalid/without_class/incompatible_type_op_modulo_bool.deca
// Description:
//    Error : operator modulo not defined with boolean type
//
// Result:
//    INCOMPATIBLE_TYPE_OPERATOR: Type \(.\)\+ is incompatible with type \(.\)\+ for the operator \(.\)\+
//    line 8
{
    print(true%4);
}

    